--- a/index.html
+++ b/index.html
@@ -5,8 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
+
+
 <body>
-    
+
+    <div id="header">
+        <div class="Container">
+            <nav>
+                <img src="images/LOGO.png" class="logo">
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Contact</a></li>
+
+                </ul>
+        
+            </nav>
+        </div>
+
+    </div>
 </body>
 </html>
