--- a/index.html
+++ b/index.html
@@ -148,6 +148,38 @@
         </div>
     </div>
 <!-- ------------Portfolio------------>
+
+<div id="portfolio">
+    <div class="container">
+        <h1 class="Sub-title"> MY WORK</h1>
+        <div class="work-list">
+            <div class="work">
+                <img src="images/gym.png" >
+                <div class="layer">
+                    <h3>GYM APP</h3>
+                    <p>Track Real-time patient of covid-19 <br>in different cities of countries</p>
+                    <a href="#"><i class="fa-sharp fa-thin fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/hungro.png" >
+                <div class="layer">
+                    <h3>FOOD  APP</h3>
+                    <p>Track Real-time patient of covid-19 <br>in different cities of countries</p>
+                    <a href="#"><i class="fa-sharp fa-thin fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/insta.png" >
+                <div class="layer">
+                    <h3>INSTAGRAM APP UI</h3>
+                    <p>Track Real-time patient of covid-19 <br>in different cities of countries</p>
+                    <a href="#"><i class="fa-sharp fa-thin fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
     <script>
 
         var tablinks =document.getElementsByClassName("tab-link");
