--- a/index.html
+++ b/index.html
@@ -178,6 +178,8 @@
                 </div>
             </div>
         </div>
+
+        <a href="#" class="btn">See More</a>
     </div>
 </div>
     <script>
